--- a/css.css
+++ b/css.css
@@ -44,12 +44,7 @@ body {
  justify-items: end;
  margin: 10px;
 }
-@media (max-width:1185px) {
-  .logo{
-    position: absolute;
-    z-index: 1;
-  }
-}
+
 .nav > .navItems {
   color: #adadad;
   font-weight: 600;
@@ -166,7 +161,7 @@ canvas {
   color: rgb(255, 255, 255);
 }
 
-.btnNav {
+/* .btnNav {
   width: 6em;
   height: 2em;
   background: none;
@@ -180,7 +175,7 @@ canvas {
   background-color: var(--greenB);
   border: 3px solid var(--gern);
   box-shadow: 0px 0px 8px 4px var(--bleu);
-}
+} */
 /* button under circla*/
 
 .btna {
@@ -212,13 +207,13 @@ canvas {
 
 #containera-stars {
   position: absolute;
-  z-index: -1;
+  
   width: 100%;
   height: 100%;
   overflow: hidden;
   transition: 0.5s;
-  backdrop-filter: blur(1rem);
-  border-radius: 5rem;
+  
+  border-radius: 5em;
 }
 
 strong {
@@ -361,7 +356,7 @@ strong {
   }
 }
 /* -------------  section 2        -------------- */
-/**mune circl nave bar**/
+/**mune circl nav bar**/
 
 
 
@@ -371,7 +366,7 @@ strong {
   z-index: 1;
   position: absolute;
   left: 30px;
-  top: 30px;
+  top: 20px;
   cursor: pointer;
   background: rgba(60, 124, 192, 0.486);
   width: 60px;
@@ -380,7 +375,7 @@ strong {
     0px 0px 10px rgba(36, 160, 218, 0.5) inset;
   border-radius: 60px;
   transition: height 0.4s;
-  animation: buds 6s  linear;
+ 
 }
 .full-menu {
   height: 300px;
@@ -392,7 +387,7 @@ strong {
   height: 60px;
 }
 
-/*ГАМБУРГЕР*/
+/**/
 .hamburger {
   position: absolute;
   left: 22px;
@@ -407,7 +402,7 @@ strong {
   width: 100%;
   background: #fff;
   border-radius: 10px;
-  /*transition: top .3s, transform .3s, left .3s, width .3s;*/
+  transition: top .3s, transform .3s, left .3s, width .3s;
   transition: all 0.3s;
 }
 
@@ -532,3 +527,46 @@ strong {
 }
 
 /**/
+@media (max-width:1185px) {
+  header{
+    
+  }
+  .logo{
+    position: absolute;
+    z-index: 1;
+  }
+}
+
+@media (max-width:450px) {
+  .borderInCenter{
+    width: 20em;
+    height: 20em;
+    bottom: 6em;
+  }
+  .btna{
+    width: 7rem;
+    bottom: 0;
+    top: 22rem;
+      }
+  .logo{
+    right: 0;
+  }
+  
+}
+@media  (orientation:landscape)
+and (min-device-width: 319px) 
+and (max-device-width: 480px)
+{
+
+  .borderInCenter{
+    width: 20em;
+    height: 18em;
+  }
+  .btna{
+    width: 7em;
+    bottom: 2px;
+  }
+  .logo{
+    right: 0;
+  }
+}
