--- a/src/cards/card.css
+++ b/src/cards/card.css
@@ -9,13 +9,12 @@ body {
   box-sizing: border-box;
   margin: 0;
   font: normal 75% Arial, Helvetica, sans-serif;
-height: 100vh;
-background-image: url("../imges/backgg.png");
-background-repeat: no-repeat;
-background-size: cover;
+  height: 100vh;
+  background-image: url("../imges/backgg.png");
+  background-repeat: repeat-y;
+  background-size: contain;
   color: var(--fontC);
   transition: 1s ease;
-  height: 100%;
 }
 h1 {
   font-weight: 900;
@@ -27,8 +26,7 @@ h1 {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
-width: 100%;
+  width: 100%;
   gap: 24px;
   margin: 0;
 }
@@ -53,7 +51,7 @@ width: 100%;
   border-radius: 10%;
   border: #222;
   overflow: visible;
-  height: 400px;
+  aspect-ratio: 1/1;
   perspective: 1000px;
 }
 .cardx:hover {
@@ -68,6 +66,17 @@ width: 100%;
     font-size: 32px;
   }
 }
+@media screen and (max-width: 611px) {
+  .cardx {
+    width: calc(80% - 10px);
+  }
+  h1 {
+    font-size: 26px;
+  }
+  p {
+    font-size: 12px;
+  }
+}
 @media screen and (max-width: 376px) {
   .cardx {
     width: calc(80% - 10px);
@@ -75,7 +84,7 @@ width: 100%;
   h1 {
     font-size: 10px;
   }
-  p{
+  p {
     font-size: 8px;
   }
 }
@@ -95,6 +104,7 @@ h1::before {
   border-right: 2px solid rgb(73 213 255);
   animation: anim 8s linear infinite;
   filter: drop-shadow(0 0 5px #fff) drop-shadow(0 0 10px #fff);
+  
 }
 
 @keyframes anim {
@@ -186,96 +196,88 @@ h1::before {
 /*canver*/
 
 canvas {
-    display: block;
-    /* vertical-align: bottom; */
-  }
-  #particles-js {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    background-color: rgb(0 0 34);
-    background-image: url("");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50% 50%;
-  }
-  .count-particles {
-    background: #000022;
-    position: absolute;
-    top: 48px;
-    left: 0;
-    width: 80px;
-    color: #13e8e9;
-    font-size: 0.8em;
-    text-align: left;
-    text-indent: 4px;
-    line-height: 14px;
-    padding-bottom: 2px;
-    font-family: Helvetica, Arial, sans-serif;
-    font-weight: bold;
-  }
-  .js-count-particles {
-    font-size: 1.1em;
-    
-  }
-  #stats,
-  .count-particles {
-    -webkit-user-select: none;
-    margin-top: 5px;
-    margin-left: 5px;
-  
-  }
-  #stats {
-    border-radius: 3px 3px 0 0;
-    overflow: hidden;
-    
-  
-  }
-  .count-particles {
-    border-radius: 0 0 3px 3px;
-  
-  }
-  .canves-main {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
+  display: block;
+  /* vertical-align: bottom; */
+}
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background-color: rgb(0 0 34);
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+}
+.count-particles {
+  background: #000022;
+  position: absolute;
+  top: 48px;
+  left: 0;
+  width: 80px;
+  color: #13e8e9;
+  font-size: 0.8em;
+  text-align: left;
+  text-indent: 4px;
+  line-height: 14px;
+  padding-bottom: 2px;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: bold;
+}
+.js-count-particles {
+  font-size: 1.1em;
+}
+#stats,
+.count-particles {
+  -webkit-user-select: none;
+  margin-top: 5px;
+  margin-left: 5px;
+}
+#stats {
+  border-radius: 3px 3px 0 0;
+  overflow: hidden;
+}
+.count-particles {
+  border-radius: 0 0 3px 3px;
+}
+.canves-main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 /**/
 
 /*shake*/
 
-.shake{
-    position: absolute;
-    width: 100px;
-    height: auto;
+.shake {
+  position: absolute;
+  width: 100px;
+  height: auto;
+  top: 1%;
+  left: 4%;
+  animation: shake 1.5s ease infinite;
+}
+
+@keyframes shake {
+  0% {
     top: 1%;
-    left: 4%; 
-    animation: shake 1.5s ease infinite;
-    
+    left: 4%;
+    opacity: 1;
+  }
+  50% {
+    top: 2%;
+    left: 4%;
+    opacity: 1;
+  }
+  100% {
+    top: 1%;
+    left: 4%;
+    opacity: 1;
+  }
 }
-
-@keyframes shake{
-    0%{
-        top: 1%;
-        left: 4%;
-        opacity: 1;
-    }
-    50%{
-        top: 2%;
-        left: 4%;
-        opacity: 1;
-    }
-    100%{
-        top: 1%;
-        left: 4%;
-        opacity: 1;
-    }
-    
-}
-
 
 /**/
