--- a/src/cardSlider/slider.css
+++ b/src/cardSlider/slider.css
@@ -11,7 +11,7 @@
 }
 
 .textmain{
-    margin-top: 20px;
+    margin: 20px auto;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -68,7 +68,10 @@ body {
   position: relative;
   transition: all 500ms ease-in-out;
 }
-
+.slide img {
+  width: 33%;
+  height: 40%;
+}
 .slide h3 {
   position: absolute;
   font-size: 24px;
@@ -129,7 +132,7 @@ body {
   left: 44%;
 }
 
-@media (max-width: 767px) {
+/* @media (max-width: 767px) {
   .container-slid {
     margin: 0;
     padding: 10px;
@@ -155,7 +158,7 @@ body {
   .button-right {
     right: 1.5vw;
   }
-}
+} */
 /*footer*/
 footer{
     margin-top: 10px;
@@ -186,4 +189,14 @@ footer{
     color: #878787;
   }
 /**/
-
+ @media (max-width: 767px) {
+.container-slid{
+  height: 50vh;
+}
+.slide{
+  height: 45vh;
+}
+.slide h3{
+  font-size: 1em;
+}
+} 
