--- a/css.css
+++ b/css.css
@@ -263,7 +263,7 @@ canvas {
 
 strong {
   z-index: 2;
-  font-family: "Avalors Personal Use";
+  /* font-family: "Avalors Personal Use"; */
   font-size: 12px;
   letter-spacing: 5px;
   color: #ffffff;
